je fais un essai pour push

--- a/Courbes_de_niveau_Guilluy_Megy.ipynb
+++ b/Courbes_de_niveau_Guilluy_Megy.ipynb
@@ -528,6 +528,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$\\gamma'(t)=-\\partial_x g(x,t)^{-1}*\\partial_t g(x,t) = \\lambda*\\begin{matrix}-\\partial_x2 f(x_1,x_2))\\\\ \\partial_x1 f(x_1,x_2))\\end{matrix}$ avec $\\lambda \\neq 0$.\n",
+    "\n",
+    "Or $\\nabla f(x)$ est non nul donc $\\gamma'(t)$ est non nul pour tout $t \\in \\left]-\\varepsilon,\\varepsilon \\right[$ et de plus $\\gamma'(t)$ est orthogonal à $\\nabla f(\\gamma(t))$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Construction des courbes de niveau"
    ]
   },
@@ -680,6 +689,13 @@
     "#### Question 7 + Tâche 4\n",
     "\n",
     "Proposer une nouvelle implémentation de `level_curve` qui arrête l'algorithme et renvoie les points connus quand le segment formé par les deux derniers points produits intersecte l'un des segments produits auparavant. En étant (raisonnablement) optimiste, doit-t'on prendre la peine de tester l'intersection du dernier segment avec tous les segments déjà produits (ce qui prend du temps ...) ou juste avec le premier ? Pour répondre à cette question, on pourra se demander si les courbes de niveau similaires à celle de la fonction de Rosenbrock passant par le point $(0.5, 0)$ (cf. Exemples de référence) -- c'est-à-dire \"auto-intersectantes\" -- sont fréquentes ou rares et pourquoi."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les courbes \"auto-intersectantes sont rares\"."
    ]
   },
   {
