est-ce que ça marche?

--- a/Courbes_de_niveau_Guilluy_Megy.ipynb
+++ b/Courbes_de_niveau_Guilluy_Megy.ipynb
@@ -787,6 +787,20 @@
     "\n",
     "Valider graphiquement le résultat au moyen des exemples de référence."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Je fais actuellement un test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
