--- a/Courbes_de_niveau_Guilluy_Megy.ipynb
+++ b/Courbes_de_niveau_Guilluy_Megy.ipynb
@@ -563,12 +563,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "N = 100\n",
-    "eps = ..."
+    "eps = 10**(-5)"
    ]
   },
   {
@@ -643,24 +643,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'eps' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-f55673a692d2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdef\u001b[0m \u001b[0mlevel_curve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0meps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m    \u001b[1;33m...\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'eps' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def G(f,x,y,x0,y0):\n",
-    "    return np.array([f(x,y)-f(x0,y0),np.sqrt((x-x0)**2+(y-y0)**2)-delta])\n",
+    "def G(f,x,y):\n",
+    "    return np.array([f(x,y)-c,np.sqrt((x-a)**2+(y-b)**2)-delta])\n",
     "\n",
     "def transf(f,x,y,delta):\n",
     "    X=np.array([x,y])\n",
@@ -672,8 +660,10 @@
     "def level_curve(f, x0, y0, delta=0.1, N=1000, eps=eps):\n",
     "    X0=np.array([x0,y0])\n",
     "    X=np.array([X0])\n",
-    "    X1=grad_f(x0,y0)*delta/np.sqrt(grad_f(x0,y0)[0]**2grad_f(x0,y0)[1]**2)+X0\n",
+    "    X1=grad_f(x0,y0)*delta/np.sqrt(grad_f(x0,y0)[0]**2+grad_f(x0,y0)[1]**2)+X0\n",
     "    for i in range(N-1):\n",
+    "        a,b=X[-1][0],X[-1][1]\n",
+    "        #(a,b) est le point précédemment trouvé, il est nécessaire pour évaluer la distance de (xk,yk) au point précédent dans la méthode de newton\n",
     "        X.append(np.array(Newton(G,transf(f,X[-1][0],X[-1][1],delta)[0],transf(f,X[-1][0],X[-1][1],delta)[1])))\n",
     "    return X"
    ]
@@ -819,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
