On espère que ça marche 2.0

--- a/Courbes_de_niveau_Guilluy_Megy.ipynb
+++ b/Courbes_de_niveau_Guilluy_Megy.ipynb
@@ -786,6 +786,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "On note: $P_1 =\\begin{pmatrix}a_1\\\\b_1\\end{pmatrix}$, $P_2 = \\begin{pmatrix}a_2\\\\b_2\\end{pmatrix}$, $u_1 = \\begin{pmatrix}a_3\\\\b_3\\end{pmatrix}$ et $u_2 = \\begin{pmatrix}a_4\\\\b_4\\end{pmatrix}$\n",
+    "\n",
+    "Les conditions de l'énoncé se traduisent sous la forme du système suivant:\n",
+    "\\begin{cases}\n",
+    "a &= a_1\\\\\n",
+    "    d &= b_1 \\\\\n",
+    "    a + b + c &= a_2 \\\\\n",
+    "    d + e + f &= b_2 \\\\\n",
+    "    b &= \\lambda a_3, \\lambda > 0 \\\\\n",
+    "    e &= \\lambda b_3 \\\\\n",
+    "    b + 2c &= \\mu a_4, \\mu > 0 \\\\\n",
+    "    e + 2f &= \\mu b_4 \\\\\n",
+    "    \\end{cases}\n",
+    "\n",
+    "Quelques lignes de calcul nous donnent:\n",
+    "\\begin{cases}\n",
+    "a &= a_1 \\\\\n",
+    "    d &= b_1 \\\\\n",
+    "    c &= \\mu a_4 + a_1 - a_2 \\\\\n",
+    "    f &= \\mu b_4 + b_1 - b_2 \\\\\n",
+    "    b &= \\lambda a_3 \\\\\n",
+    "    e &= \\lambda b_3 \\\\\n",
+    "    \\begin{pmatrix}\n",
+    "a_3 & a_4 \\\\\n",
+    "    b_3 & b_4\n",
+    "\\end{pmatrix}\\cdot\\begin{pmatrix}\\lambda\\\\\\mu\\end{pmatrix} &= 2\\cdot\\begin{pmatrix}a_2-a_1\\\\b_2-b_1\\end{pmatrix}\\\\\n",
+    "    \\end{cases}\n",
+    "\n",
+    "Si $(u_1, u_2)$ est libre, alors la matrice $\\begin{pmatrix}a_3 & a_4 \\\\ b_3 & b_4\\end{pmatrix}$ est inversible.\n",
+    "\n",
+    "Dans ce cas, on obtient de façon unique tous les coefficients recherchés. Il reste cependant l'étape de synthèse, où il faut notamment montrer que les coefficients $\\lambda$ et $\\mu$ obtenus sont positifs.\n",
+    "\n",
+    "Hypothèse: si $u_1$ et $u_2$ de même direction et de même sens, on interpolle avec une droite. Si même direction et sens opposé, pas de solution de la forme souhaitée."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Tâche 6\n",
     "\n",
     "Implémenter la solution sous la forme d'une fonction `gamma` dont les arguments sont `t`, `P1`, `P2`, `u1` et `u2` et qui renvoie le ou les points $\\gamma(t)$ associés. Lorsqu'il n'existe pas de chemin de la forme souhaitée pour les paramètres `P1`, `P2`, `u1` et `u2`, on utilisera comment remplacement de $\\gamma$ un chemin rectiligne interpolant linéairement les points $P_1$ et $P_2$.\n",
